Diapositivas casi listas (Falta el Sketch)

--- a/demo.html
+++ b/demo.html
@@ -41,10 +41,11 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
+					<h1>ANTIALIASING APPLIED TO POLIGONAL SHAPES</h1>
 					<h3>The HTML Presentation Framework</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> and <a href="https://github.com/hakimel/reveal.js/graphs/contributors">contributors</a></small>
+						<small><a href="https://github.com/mamurciac/reveal.js/">MICHAEL ANDRÉS MURCIA CONTRERAS</a></small>
+						<small>Reveal.js's Template forked into <a href="https://github.com/hakimel/reveal.js/">https://github.com/hakimel/reveal.js</a>. By <a href="http://hakim.se">Hakim El Hattab</a> and his contributors</small>
 					</p>
 				</section>
 
